# quorum-ai

./: .env.example  .env.test  .fridayrules  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  ActivityService_Functional_Test_Report.md  CHANGELOG.md  CLAUDE.md  Dockerfile  HEALTHCHECK_TEST_REPORT.md  IMPLEMENTATION_SUMMARY.md  LICENSE  Makefile  QA_CHECKLIST.md  README.md  SERVICE_TEMPLATE_README.md  STAKING_ARCHITECTURE.md  STAKING_DATA_FLOW.md  agent_state.json  ai_service_testing.py  anvil-dump.json  attestation-validation-error-analysis.md  attestation_uid.txt  auto_claude.sh  bac-173-technical-analysis.md  claude_state.json  claude_status.json  config.json  config.py  debug_attestation_call.py  direct_test_runner.py  docker-compose.yml  functional_test.py  live_endpoint_test.py  local_run_service.sh  log.txt  logs.sh  main.py  (+27 more)
.claude/: settings.json  todo-monitor.rs
agent_state/: agent_state.json
api/: __init__.py
backend/: Dockerfile  PEARL_LOGGING_GUIDE.md  QUORUM_TRACKER_TEST_RESULTS.md  SIGNAL_HANDLER_INTEGRATION.md  agent_state.json  claude_state.json  concurrent_preferences.txt  config.py  entrypoint.sh  ethereum_private_key.txt  find_org_slugs.py  find_org_slugs_lite.py  functional_test_verification.py  integration_test_results.xml  log.txt  logging_config.py  main.py  models.py  plan.md  pyproject.toml  requirements.txt  river.py  river_test.py  shutdown_state.json  test_attestation_flow.py  test_env.sh  test_runner.py  test_safe_coverage.py  test_safe_coverage_final.py  test_safe_service_comprehensive.py  test_safe_service_full_coverage.py  user_preferences.txt
backend/abi/: QuorumStakingTokenActivityChecker.json  arbitrum.json  attestation_tracker.json  compound_bravo.json  eas.json  nouns.json  quorum_tracker.json
backend/docs/: agent-run-testing.md
backend/examples/: state_manager_integration.py  test_private_key.txt  user_preferences_aggressive.json  user_preferences_balanced.json  user_preferences_conservative.json
backend/scripts/: README.md  ai_service_testing.py  quick_test.sh  test_agent_run.py  test_attestation_tracker_e2e.py  test_quorum_tracker_e2e.py  verify_quorum_tracker_deployment.py
backend/services/: AGENTS.md  CLAUDE.md  __init__.py  activity_service.py  agent_run_logger.py  agent_run_service.py  ai_service.py  base_detector.py  base_governor.py  cache_service.py  compound_bravo_governor.py  governor_abi.py  governor_config_manager.py  governor_integration_service.py  governor_registry.py  health_check_service.py  health_status_service.py  key_manager.py  network_governor_manager.py  proposal_evaluation_service.py  proposal_filter.py  quorum_tracker_service.py  safe_service.py  signal_handler.py  signal_handler_usage.py  snapshot_service.py  state_manager.py  state_transition_tracker.py  tally_service.py  user_preferences_service.py  vote_encoder.py  voter.py  voter_olas.py  voting_service.py  withdrawal_service.py
backend/tests/: CLAUDE.md  README_AI_INTEGRATION_TEST.md  TDD_CYCLE_4_INTEGRATION_TESTS_SUMMARY.md  TDD_CYCLE_5_GOVERNOR_REGISTRY_TESTS_SUMMARY.md  __init__.py  ai_test_apis.py  ai_voting_test_results.json  conftest.py  test_abi_loader.py  test_activity_service.py  test_agent_dashboard_integration.py  test_agent_run_attestation.py  test_agent_run_config.py  test_agent_run_decisions.py  test_agent_run_endpoint.py  test_agent_run_endpoint_summary.md  test_agent_run_filtering_integration.py  test_agent_run_integration.py  test_agent_run_logger_pearl.py  test_agent_run_models.py  test_agent_run_quorum_tracker_comprehensive.py  test_agent_run_quorum_tracker_integration.py  test_agent_run_service.py  test_agent_run_service_decisions.py  test_agent_run_service_filtering.py  test_agent_run_service_status.py  test_agent_run_state_tracking.py  test_agent_run_statistics.py  test_agent_run_status.py  test_agent_run_voting_history.py  test_ai_cache_integration.py  test_ai_integration.py  test_ai_integration_endpoints.py  test_ai_performance.py  test_ai_service.py  test_ai_service_agent_migration.py  test_ai_service_pearl_logging.py  test_ai_service_phase2.py  test_ai_service_separation.py  test_ai_service_strategic.py  (+83 more)
backend/tests/fixtures/: agent_fixtures.py
backend/tests/integration/: __init__.py  test_agent_run_workflow.py  test_attestation_tracker_integration.py
backend/utils/: __init__.py  abi_loader.py  attestation_tracker_helpers.py  cache_decorators.py  cache_utils.py  eas_signature.py  env_helper.py  logging.py  service_utils.py  vote_encoder.py  web3_provider.py
ci/: CI_STRUCTURE.md  README.md  run-attestation-ci.sh  test_attestation_tracker_ci.py
contracts/: .env.attestation.example  .env.mainnet.example  CLAUDE.md  NEW_STAKING.md  README.md  deploy_local.sh  deploy_mainnet.sh  forge-testing.md  foundry.toml  test-plan.md  test_attestation_tracker.sh  verify.md
frontend/: Dockerfile  (+8 more)
(+192 files in other folders)
